# netconf-bench

./: .gitignore  LICENSE.txt  README.md  README.md.in  benchmark.sh  flake.nix  justfile  run_benchmark.sh
clients/go-nemith/: go.mod  go.sum  main.go
clients/go-scrapligo/: go.mod  go.sum  main.go
clients/ncclient/: benchmark.py  pyproject.toml
clients/scrapli-netconf/: benchmark.py  pyproject.toml
results/: size-1024-chunked.md  size-1024-marked.md  size-10240-chunked.md  size-10240-marked.md  size-102400-chunked.md  size-102400-marked.md  size-1048576-chunked.md  size-1048576-marked.md
scripts/: generate_markdown.py  generate_plot.py  plot.py
server/: go.mod  main.go
